fix: cr logo spacing between copy

--- a/sass/base/components/footer/_footer.scss
+++ b/sass/base/components/footer/_footer.scss
@@ -23,6 +23,7 @@ footer[role=contentinfo] {
   }
   .footer__branding {
     text-align: center;
+    margin-top:25px;
     a {
       display: inline-block;
       width: 70px;
